--- a/toutparcourir.css
+++ b/toutparcourir.css
@@ -1,10 +1,16 @@
+/* Header et navigation */
 .header {
     z-index: 2;
 }
+
+p1 {
+        font-family: 'Greek Freak', cursive; /* Utiliser la police Greek Freak avec une alternative cursive */
+    }
+
 .navigation {
     display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
     background-color: #3f6faa;
     padding: 10px 0;
 }
@@ -25,7 +31,7 @@
 .dropdown {
     position: relative;
     display: flex;
-    align-items: center; 
+    align-items: center;
 }
 
 .dropdown-content {
@@ -44,47 +50,180 @@
     text-decoration: none;
     display: block;
     text-align: left;
-    transition: background-color 0.3s, color 0.3s; 
+    transition: background-color 0.3s, color 0.3s;
 }
 
 .dropdown-content a:hover {
-    background-color: #c08266; 
-    color: white; 
+    background-color: #c08266;
+    color: white;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
+/* Section de navigation */
 .browse-section {
-    background-color: #c08266; 
+    background-color: #c08266;
     padding: 20px;
-    border-radius: 8px; 
-    color: white; 
-    height: 100vh; 
-    overflow-y: auto; 
+    border-radius: 8px;
+    color: white;
+    height: 100vh;
+    overflow-y: auto;
 }
-
 
 .purchase-filter label,
 .purchase-filter select {
-    color: black; 
+    color: black;
 }
+
+/* Images */
 .centered-image {
     display: flex;
     justify-content: center;
-    margin: 20px 0; 
+    margin: 20px 0;
+    position: relative;
 }
 
 .centered-image img {
-    max-width: 450px; 
-    height: auto; 
+    max-width: 450px;
+    height: auto;
+    border-radius: 8px;
 }
 
+/* Bouton "Tout découvrir" */
+.centered-image button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    padding: 10px 20px;
+    background-color: #c08266;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.centered-image button:hover {
+    background-color: #a6694c;
+    color: #fff;
+}
+
+/* Galerie d'images */
+/* Style de la galerie */
 .gallery {
     display: grid;
-    grid-template-columns: repeat(5, 1fr); 
-    gap: 20px; 
+    grid-template-columns: repeat(5, 1fr); /* Cinq images par ligne */
+    gap: 20px; /* Espace entre les images */
 }
-        
+
+/* Style de chaque figure */
+.gallery figure {
+    margin: 0; /* Supprimez les marges par défaut des figures */
+    text-align: center; /* Centre le texte sous les images */
+}
+
+/* Style des images */
+/* Style des images */
+.gallery img {
+    width: 150px; /* Largeur spécifiée */
+    height: 220px; /* Hauteur spécifiée */
+    object-fit: cover; /* Optionnel: garantit que l'image est redimensionnée pour remplir la zone définie sans déformer ses proportions */
+    display: block; /* Évite les espaces blancs sous les images */
+    margin: 0 auto; /* Centre les images horizontalement */
+}
+
+
+/* Style des légendes */
+.gallery figcaption {
+    margin-top: 10px; /* Espace au-dessus du titre */
+    font-size: 14px; /* Taille de la police du titre */
+    color: #fff; /* Couleur du texte du titre */
+}
+
+/* Modale CSS */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    color: black;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+/* Ajoute une marge en bas */
+.purchase-filter {
+    margin-bottom: 60px; 
+}
+
+/* Modale CSS */ 
+.modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        padding-top: 100px;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgb(0,0,0);
+        background-color: rgba(0,0,0,0.4);
+        }
+
+.modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+        }
+
+.close {
+        color: #aaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+        }
+
+.close:hover,
+.close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
 
