--- a/toutparcourir.css
+++ b/toutparcourir.css
@@ -1,18 +1,16 @@
-/* Header et navigation */
 .header {
     z-index: 2;
 }
 
-p1 {
-        font-family: 'Greek Freak', cursive; /* Utiliser la police Greek Freak avec une alternative cursive */
-    }
+.page{
+    background-color: #c08266;
+    padding: 10px;
+    color: white;
+}
 
-.navigation {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #3f6faa;
-    padding: 10px 0;
+.page p {
+    font-family: 'Greek Freak', cursive; 
+    text-align: center;
 }
 
 .nav-button {
@@ -37,7 +35,7 @@ p1 {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #3f6faa;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     min-width: 160px;
@@ -45,16 +43,17 @@ p1 {
 }
 
 .dropdown-content a {
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
-    transition: background-color 0.3s, color 0.3s;
+    background-color: #3f6faa;
+    transition: 0.3s, color 0.3s;
 }
 
 .dropdown-content a:hover {
-    background-color: #c08266;
+    background-color: #a6694c;
     color: white;
 }
 
@@ -62,22 +61,11 @@ p1 {
     display: block;
 }
 
-/* Section de navigation */
-.browse-section {
-    background-color: #c08266;
-    padding: 20px;
-    border-radius: 8px;
-    color: white;
-    height: 100vh;
-    overflow-y: auto;
-}
-
 .purchase-filter label,
 .purchase-filter select {
     color: black;
 }
 
-/* Images */
 .centered-image {
     display: flex;
     justify-content: center;
@@ -88,10 +76,9 @@ p1 {
 .centered-image img {
     max-width: 450px;
     height: auto;
-    border-radius: 8px;
+    border-radius: 3px;
 }
 
-/* Bouton "Tout découvrir" */
 .centered-image button {
     position: absolute;
     top: 50%;
@@ -113,39 +100,28 @@ p1 {
     color: #fff;
 }
 
-/* Galerie d'images */
-/* Style de la galerie */
 .gallery {
     display: grid;
-    grid-template-columns: repeat(5, 1fr); /* Cinq images par ligne */
-    gap: 20px; /* Espace entre les images */
+    grid-template-columns: repeat(1, 1fr);
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 400px; 
 }
 
-/* Style de chaque figure */
-.gallery figure {
-    margin: 0; /* Supprimez les marges par défaut des figures */
-    text-align: center; /* Centre le texte sous les images */
-}
-
-/* Style des images */
-/* Style des images */
 .gallery img {
-    width: 150px; /* Largeur spécifiée */
-    height: 220px; /* Hauteur spécifiée */
-    object-fit: cover; /* Optionnel: garantit que l'image est redimensionnée pour remplir la zone définie sans déformer ses proportions */
-    display: block; /* Évite les espaces blancs sous les images */
-    margin: 0 auto; /* Centre les images horizontalement */
+    width: 150px; 
+    height: 220px; 
+    object-fit: cover;
+    border-radius: 10%;
+    
 }
 
-
-/* Style des légendes */
 .gallery figcaption {
-    margin-top: 10px; /* Espace au-dessus du titre */
-    font-size: 14px; /* Taille de la police du titre */
-    color: #fff; /* Couleur du texte du titre */
+    margin-top: 10px;
+    font-size: 14px; 
+    color: white; 
 }
 
-/* Modale CSS */
 .modal {
     display: none;
     position: fixed;
@@ -183,47 +159,58 @@ p1 {
     cursor: pointer;
 }
 
-
-/* Ajoute une marge en bas */
 .purchase-filter {
     margin-bottom: 60px; 
 }
 
-/* Modale CSS */ 
 .modal {
-        display: none;
-        position: fixed;
-        z-index: 1;
-        padding-top: 100px;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        background-color: rgb(0,0,0);
-        background-color: rgba(0,0,0,0.4);
-        }
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
 
 .modal-content {
-        background-color: #fefefe;
-        margin: auto;
-        padding: 20px;
-        border: 1px solid #888;
-        width: 80%;
-        }
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
 
 .close {
-        color: #aaa;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
-        }
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
 
 .close:hover,
 .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
+    color: black;
+    text-decoration: none;
+    cursor:pointer;
+}
 
+.image-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
+    grid-gap: 10px;
+    justify-items: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.image-grid img {
+    max-width: 100%; 
+    height: auto; 
+    width: 100%; 
+}
 
